2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/exportsettingswidget.py:
	Small typo fix.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/pixmaps/pitivi-advanced.png:
	* pitivi/ui/mainwindow.py:
	New icon for Advanced mode.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timeline.py:
	comments fixups.
	* pitivi/ui/viewer.py:
	Pause the timeline when opening the render dialogbox.
	Grey-out the 'Record' button until the user has chosen a file.
	Remove the 'Choose file to render to' message once the user has chosen
	a file.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	* tests/test_timeline_composition.py:
	Fix more cases when removing sources from the composition.

2007-04-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Only establish if the file is valid or not at the complete end of the
	discovery. This avoids having 'not_media_file' emitted several times for
	one file.
	* pitivi/ui/sourcefactories.py:
	Make the text message for the discoverer error dialog more user-friendly.

2007-04-17  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	(TimelineComposition.movesource): Clamp new positions values, and fixup
	check for same-position-as-before.
	Fixes #420847
	* tests/test_timeline_composition.py:
	Add unit tests for same position moves, and insane values of new
	positions.

2007-04-13  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	Adjust the new position of the source when moving it further in time
	only.
	Fixes #416702
	* tests/test_timeline_composition.py:
	Unit tests for composition.moveSource().

2007-04-13  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/source.py:
	initialize media-start and media-duration to -1 so we properly set the
	values on the gnlobject the first time round.

2007-04-13  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	Fix removal of linked sources.